--- a/css/main.css
+++ b/css/main.css
@@ -34,10 +34,6 @@ a:hover {
     width: 50%;
 }
 
-.carousel {
-    background-color: #557a95;
-}
-
 .navbar-right a {
     text-align: right!important;
 }
@@ -79,4 +75,49 @@ footer ul a{
     footer {
         clip-path: none;
     }
+}
+
+.images{
+    flex:0 0 80%;
+    min-height: 80vh;
+    background: url('../img/fashion/fashion-3.jpg')center/cover no-repeat;
+    border-radius: 15px;
+    box-shadow: 5px 10px black;
+    position: relative;
+    width: 80%;
+    margin: auto;
+    margin-top: 15px;
+}
+
+
+.btn{
+    display: inline-block;
+    background: white;
+    color: black;
+    font-size: 1.5rem;
+    padding: 0.5rem;
+    border-radius: 20%;
+    box-shadow: 2px 5px black;
+    outline: none;
+}
+
+.prevBtn{
+    position: absolute;
+    top: 50%;
+}
+
+.nextBtn{
+    position: absolute;
+    top: 50%;
+    right: 0;
+}
+
+.btn:active{
+    background: grey;
+    box-shadow: 1px 1px grey;
+}
+
+.btn:hover{
+    background: #557a95;
+    color: white;
 }
